# aweye

./: .gitignore  CMakeLists.txt  CMakeTest.txt  README.md  genBuilds.cmake  gettext.sh  license.txt
EyeWatcher/: TrashPanel.cpp
EyeWatcher/include/: AboutDialog.h  AbstractCommand.h  AbstractConfig.h  AbstractConfigImpl.h  AbstractEWAppController.h  AbstractEWFactory.h  AbstractEWMainFrame.h  AbstractEWMainFramePres.h  AbstractEWPresenter.h  AbstractEWTaskbar.h  AbstractEWTaskbarPres.h  AbstractEWViewPres.h  AbstractMsgHandler.h  AbstractOptionsDialog.h  AbstractOptionsDialogPres.h  AbstractPresenceHandler.h  AbstractTimeHandler.h  AbstractTimeKeeper.h  AbstractTimer.h  AbstractTimerHandler.h  AbstractWebcamHandler.h  BaseException.h  Command.h  Config.h  ConfigData.h  DisplayOptionsDialogCmd.h  EWAppController.h  EWBuilder.h  EWLogic.h  EWMainFrame.h  EWMainFramePres.h  EWPresenter.h  EWTaskBar.h  EWTaskBarPres.h  EWViewObserver.h  EWViewPres.h  ExitCommand.h  EyeWatcherApp.h  EyeWatcherInt.h  EyeWatcherMain.h  (+25 more)
EyeWatcher/src/: AboutDialog.cpp  Config.cpp  ConfigData.cpp  DisplayOptionsDialogCmd.cpp  EWAppController.cpp  EWBuilder.cpp  EWLogic.cpp  EWMainFrame.cpp  EWMainFramePres.cpp  EWPresenter.cpp  EWTaskBar.cpp  EWTaskBarPres.cpp  EWViewPres.cpp  EwLogicImpl.cpp  ExitCommand.cpp  EyeWatcherApp.cpp  EyeWatcherInt.cpp  EyeWatcherMain.cpp  MsgHandler.cpp  MyWxTimer.cpp  ObservableWxMenu.cpp  OptionsDialog.cpp  OptionsDialogPres.cpp  TKStateAway.cpp  TKStateHere.cpp  TKStateOff.cpp  TimeHandler.cpp  TimeKeeper.cpp  WebcamHandler.cpp  WebcamHandlerNorm.cpp  WebcamHandlerProc.cpp  WxEWFactory.cpp  WxHandlerFactory.cpp  main-IsHereCmd.cpp  wxConfigImpl.cpp  wxTimerHandler.cpp
EyeWatcher/wxsmith/: About.wxs  AboutDialog.wxs  EWMainFrame.wxs  Options.wxs  OptionsDialog.wxs  TrashPanel.wxs
EyesWatcher/: TrashPanel.h
EyesWatcher/include/: AboutDialog.h  AbstractCommand.h  AbstractConfig.h  AbstractConfigImpl.h  AbstractEWAppController.h  AbstractEWMainFrame.h  AbstractEWPresenter.h  AbstractEWTaskbar.h  AbstractEWViewPres.h  AbstractEventHandler.h  AbstractMainFrame.h  AbstractMsgHandler.h  AbstractOptionsDialog.h  AbstractOptionsDialogPres.h  AbstractPresenceHandler.h  AbstractTKController.h  AbstractTaskBar.h  AbstractTimeHandler.h  AbstractTimeKeeper.h  AbstractTimer.h  App.h  BaseException.h  Builder.h  BuilderOptionsDialogPres.h  Config.h  ConfigData.h  ConfigObservers.h  DisplayOptionsDialogCmd.h  EWApp.h  EWAppController.h  EWBuilder.h  EWMainFrame.h  EWMainFramePres.h  EWPresenter.h  EWTaskBar.h  EWTaskBarPres.h  EWViewObserver.h  EWViewPres.h  EventHandler.h  IsHereCmd.h  (+24 more)
EyesWatcher/src/: AboutDialog.cpp  App.cpp  BuilderOptionsDialogPres.cpp  Config.cpp  ConfigData.cpp  DisplayOptionsDialogCmd.cpp  EWApp.cpp  EWAppController.cpp  EWMainFrame.cpp  EWMainFramePres.cpp  EWPresenter.cpp  EWTaskBar.cpp  EWTaskBarPres.cpp  EventHandler.cpp  IsHereProcess.cpp  MainFrame.cpp  MainFramePres.cpp  MsgHandler.cpp  MyWxTimer.cpp  ObservableWxMenu.cpp  OptionsDialog.cpp  OptionsDialogPres.cpp  TKController.cpp  TKStateAway.cpp  TKStateHere.cpp  TKStateOff.cpp  TaskBar.cpp  TaskBarPres.cpp  TimeHandler.cpp  TimeKeeper.cpp  WebcamHandler.cpp  WebcamHandlerProc.cpp  main-IsHereCmd.cpp  wxConfigImpl.cpp
EyesWatcher/wxsmith/: EWMainFrame.wxs  MainFrame.wxs  OptionsDialog.wxs
TestEyeWatcher/TestFiles/: invalidValConfig.cfg  validConfig.cfg
TestEyeWatcher/include/: CommandStub.h  ConfigImplStub.h  ConfigStub.h  DisOptDiaCmdStub.h  EWAppControllerStub.h  EWMainFramePresStub.h  EWMainFrameStub.h  EWPresenterStub.h  EWTaskBarPresStub.h  EWTaskbarStub.h  EWTestBuilder.h  EWViewObserverStub.h  MockupHandlerFactory.h  MsgHandlerStub.h  ObserverStub.h  OptionsDialogPresStub.h  OptionsDialogStub.h  PresenceHandlerStub.h  SetTopWindowStub.h  TimeHandlerStub.h  TimeKeeperStub.h  TimerHandlerStub.h  TimerStub.h
TestEyeWatcher/src/: main.cpp  testConfig.cpp  testConfigData.cpp  testEWAppController.cpp  testEWBuilder.cpp  testEWLogic.cpp  testEWMainFramePres.cpp  testEWPresenter.cpp  testEWTaskBarPres.cpp  testOptionsDialogPres.cpp  testTimeKeeper.cpp
TestEyesWatcher/include/: BuiOptDisPresStub.h  CommandStub.h  ConfigImplStub.h  ConfigObserverStubs.h  ConfigStub.h  DisOptDiaCmdStub.h  EWAppControllerStub.h  EWMainFramePresStub.h  EWMainFrameStub.h  EWPresenterStub.h  EWTaskBarPresStub.h  EWTaskbarStub.h  EWTestBuilder.h  EWViewObserverStub.h  EWViewPresStub.h  EventHandlerStub.h  MainFrameStub.h  MsgHandlerStub.h  OptionsDialogPresStub.h  OptionsDialogStub.h  PresenceHandlerStub.h  SetTopWindowStub.h  TKControllerObserverStub.h  TKControllerStub.h  TaskBarStub.h  TestBuilder.h  TimeHandlerStub.h  TimeKeeperStub.h  TimerStub.h  ViewPresStub.h
TestEyesWatcher/src/: main.cpp  testBuilder.cpp  testBuilderOptionsDialogPres.cpp  testConfig.cpp  testConfigData.cpp  testConfigObservers.cpp  testEWAppController.cpp  testEWBuilder.cpp  testEWMainFramePres.cpp  testEWPresenter.cpp  testEWTaskBarPres.cpp  testEventHandler.cpp  testMainFramePres.cpp  testOptionsDialogPres.cpp  testTKController.cpp  testTaskBarPres.cpp  testTimeKeeper.cpp
cmake/: Aweye.in.rc  CMakeCmd.in.py  CMakeDeb.py  Defines.in.h  EW.in.cmake  EWCmd.in.py  EWTest.in.cmake  FindUnitTest++.cmake  aweye.cmake  aweye.in.cmake  aweyeCmd.in.py  aweyeTest.cmake  aweyeTest.in.cmake  common.cmake  uninstall.in.cmake
data/TestFiles/: invalidConfig.cfg
include/aweye/: AbstractConfig.h  AbstractConfigImpl.h  AbstractEventHandler.h  AbstractMsgHandler.h  AbstractPresenceHandler.h  AbstractTKController.h  AbstractTaskBar.h  AbstractTimeKeeper.h  AbstractTimer.h  AbstractUtils.h  Builder.h  Config.h  ConfigData.h  ConfigObservers.h  EventHandler.h  IsHereCmd.h  MainFramePres.h  MenuObserver.h  OptionsDialogPres.h  Subject.h  TKController.h  TKState.h  TKStateAway.h  TKStateHere.h  TKStateOff.h  TaskBarPres.h  TaskContext.h  TaskExceptionObserver.h  TimeHandler.h  TimeKeeper.h  WebcamHandler.h  WebcamHandlerProc.h
include/ew/: AbstractConfig.h  AbstractConfigImpl.h  AbstractEventHandler.h  AbstractTimer.h  (+38 more)
po/: EyesWatcher.pot  gettext.sh
(+197 files in other folders)
